[FIX] Reduce chances of unbroken string overflowing popover by stacking heading and data vertically using list-group, so info has more horizontal space.

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -2475,36 +2475,6 @@ fieldset.dropzone {
   text-align: right;
   border: none;
   width: 6em; }
-
-.user-info {
-  font-size: 0.9em;
-  padding-bottom: 2em; }
-
-.user-info p {
-  margin-left: 50px; }
-
-.user-info .avatar {
-  float: left;
-  margin-right: 0.3em; }
-
-.user-info .gender, .user-info .email, .user-info .lastseen {
-  display: block;
-  clear: right; }
-
-.user-info .distance {
-  margin-left: 1em; }
-
-.user-info .friendship {
-  list-style: none;
-  margin: 0 1em 0 50px;
-  padding: 0; }
-
-.user-info .friendship li {
-  float: left;
-  margin-right: 1em; }
-
-.user-info .friendship li span {
-  padding-right: 0.5em; }
 /* avatar upload */
 .user-avatar-preview {
   margin-right: 1em; }
@@ -3019,14 +2989,8 @@ body.fullscreen.tiki.navbar-padding {
   border: none;
   background: transparent; }
 
-.tiki .popover {
-  word-wrap: break-word;
-  word-break: break-all; }
-
 .tiki.tiki-list_file_gallery .col1 .popover, .tiki.tiki_file_galleries .col1 .popover, .tiki.tiki_trackers .col1 .popover, .tiki .wikiplugin-trackerlist .popover {
-  max-width: 50vw;
-  word-wrap: normal;
-  word-break: normal; }
+  max-width: 50vw; }
 
 .tiki .popover p:last-child {
   margin-bottom: 0; }
