--- a/themes/base_files/scss/_tiki-mytiki.scss
+++ b/themes/base_files/scss/_tiki-mytiki.scss
@@ -109,45 +109,45 @@
 }
 
 // /* Friendship / Community  */
-.user-info {
-	font-size: .9em;
-	padding-bottom: 2em;
-}
-
-.user-info p {
-	margin-left: 50px;
-}
-
-.user-info .avatar {
-	float: left;
-	margin-right: .3em;
-}
-
-.user-info .gender,
-.user-info .email,
-.user-info .lastseen {
-	display: block;
-	clear: right;
-}
-
-.user-info .distance {
-	margin-left: 1em;
-}
-
-.user-info .friendship {
-	list-style: none;
-	margin: 0 1em 0 50px;
-	padding: 0;
-}
-
-.user-info .friendship li {
-	float: left;
-	margin-right: 1em;
-}
-
-.user-info .friendship li span {
-	padding-right: .5em;
-}
+//.user-info {
+//	font-size: .9em;
+//	padding-bottom: 2em;
+//}
+//
+//.user-info p {
+//	margin-left: 50px;
+//}
+//
+//.user-info .avatar {
+//	float: left;
+//	margin-right: .3em;
+//}
+//
+//.user-info .gender,
+//.user-info .email,
+//.user-info .lastseen {
+//	display: block;
+//	clear: right;
+//}
+//
+//.user-info .distance {
+//	margin-left: 1em;
+//}
+//
+//.user-info .friendship {
+//	list-style: none;
+//	margin: 0 1em 0 50px;
+//	padding: 0;
+//}
+//
+//.user-info .friendship li {
+//	float: left;
+//	margin-right: 1em;
+//}
+//
+//.user-info .friendship li span {
+//	padding-right: .5em;
+//}
 
 /* avatar upload */
 .user-avatar-preview {
@@ -158,7 +158,6 @@
 }
 
 /* webmail & groupmail */
-
 .box-webmail_inbox img.icon {
 	vertical-align: middle;
 }
